<resources>
    <string name="app_name">Planet Paper Wallpaper</string>
    <string name="wallapaper_description">A space wallpaper with dynamic shadows and movement.</string>

    <!-- Set Wallpaper Activity Strings -->
    <string name="settings_button">Settings</string>
    <string name="set_wallpaper_button">Set Wallpaper</string>
    <string name="greeting">Press the button to set the wallpaper</string>

    <!-- Settings strings-->
    <string name="title_hi_res_textures">Use high resolution textures</string>
    <string name="title_select_planet">Select planet</string>
    <string name="summary_select_planet">Select which planet/moon to use as the foreground</string>
    <string name="title_select_animation">Select animation</string>
    <string name="summary_select_animation">Select which animation to use</string>
    <string name="title_revolve_time">Select revolve time</string>
    <string name="summary_revolve_time">Select the time it will take for the planet to perform one revolution</string>
    <string name="summary_hi_res_textures">Enables using hi-resolution textures rather than the standard ones. Will cause frames drops and more memory usage.</string>
    <string name="key_hi_res_textures">hi_res_textures</string>
    <string name="key_selected_planet">selected_planet</string>
    <string name="key_select_animation">selected_animation</string>
    <string name="key_revolve_time">revolve_time</string>
    <string name="title_general">General</string>
    <string name="title_about">About</string>
    <string name="title_advanced_settings">Advanced</string>
    <string name="title_over_draw">Overdraw amount</string>
    <string name="summary_over_draw">The left and right overdraw of animators. Default is 150, increasing it will increase the size of the planets.</string>
    <string name="key_over_draw">overdraw_amt</string>
    <string name="title_offset_y">Offset y</string>
    <string name="summary_offset_y">The amount to offset the planets relative to the y coordinate. Default is 600, increasing it will shift the planets towards the center.</string>
    <string name="key_offset_y">offset_y</string>
    <string name="title_reset_advanced">Reset advanced settings</string>
    <string name="key_reset_advanced">reset_advanced</string>
    <string name="background_illustration">Background Illustration</string>
    <string name="splash_string">Splash Logo</string>
    <string name="title_settings">Settings</string>
    <string name="wallpaper_description_intro">Planet paper is a space-based wallpaper with many different planets, moons, and stars to choose from. It uses dynamic shadow casting to create a beautiful looking dynamic wallpaper.</string>
</resources>
