<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="0dp" android:layout_margin="0dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_illustration"/>


    <LinearLayout
        android:id="@+id/splash_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:translationY="0dp"
        android:background="@drawable/card_bg">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/splash"
            android:scaleType="fitCenter"
            android:contentDescription="@string/splash_string" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:padding="20dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:src="@drawable/ic_settings_applications_white_24dp"
                android:scaleType="fitCenter"
                android:theme="@style/RippleButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:contentDescription="@string/settings_button"
                android:onClick="launchSettingsIntent"/>

            <View
                android:layout_width="1dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@color/dark"/>

            <ImageButton
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:padding="20dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:src="@drawable/ic_image_white_24dp"
                android:scaleType="fitCenter"
                android:theme="@style/RippleButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:contentDescription="@string/set_wallpaper_button"
                android:onClick="launchIntent"/>

        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"

            android:text="@string/wallpaper_description_intro"
            android:lineSpacingMultiplier="1.2"
            android:textColor="@color/dark"
            android:textSize="16sp"
            />

    </LinearLayout>

</RelativeLayout>